i added have of img
i added have of img for my side bar of twitter

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <div class="container">
-
+        <img src="https://img.icons8.com/fluency/48/000000/twitter.png" />
+        <img src="https://img.icons8.com/ios-filled/50/4a90e2/home.png" />
+        <img src="https://img.icons8.com/ios-filled/50/4a90e2/hashtag-2.png" />
+        <img src="https://img.icons8.com/ios-filled/50/4a90e2/bell.png" />
+        <img src="https://img.icons8.com/ios-filled/50/4a90e2/filled-message.png" />
+        
     </div>
 </body>
 </html>
