i added other img
i added other img in my project these are also for  left-side bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         <img src="https://img.icons8.com/ios-filled/50/4a90e2/hashtag-2.png" />
         <img src="https://img.icons8.com/ios-filled/50/4a90e2/bell.png" />
         <img src="https://img.icons8.com/ios-filled/50/4a90e2/filled-message.png" />
-        
+        <img
+        src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/4a90e2/external-bookmarks-user-interface-flatart-icons-outline-flatarticons.png" />
+        <img src="https://img.icons8.com/ios-filled/50/4a90e2/list.png"/>
+        <img src="https://img.icons8.com/ios/50/4a90e2/administrator-male--v1.png"/>
+        <img src="https://img.icons8.com/ios-filled/50/4a90e2/more.png"/>
+        <button class="btn btn-primary">twitter</button> 
+        <img src="" alt="zain-pic">
+        <p>Zain Qamer</p>   
     </div>
 </body>
 </html>
