i added images for home
i added images for home
i started my work on twitter main content

--- a/index.html
+++ b/index.html
@@ -46,11 +46,19 @@
                     
                    <a href=""> <img src="C:\Users\zain\Desktop\twiiter-layout\img\zain1.jpeg" alt="zain-pic" class="l-side-img profile">
                     <span class="text">Zain Qamer</span></a>
-                     
+                <!-- side bar ended  -->       
+            </div>
+            <div class="col">
+                 <span class="h1">Home</span><br>
+                 <img src="C:\Users\zain\Desktop\twiiter-layout\img\zain1.jpeg" alt="zain-pic" class="l-side-img profile">
+                    <span class="text-muted">What's happening</span>
+                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji.png" alt=""></a>
+                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji2.png" alt=""></a>
+                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji3.png" alt=""></a>
+                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji4.png" alt=""></a>
+                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji5.png" alt=""></a>
             </div>
         </div>
-        <!-- side bar ended  -->
-
     </div>
 </body>
 </html>
