i have made the main content area
i have made the main content area

--- a/index.html
+++ b/index.html
@@ -50,14 +50,20 @@
             </div>
             <div class="col">
                  <span class="h1">Home</span><br>
+                 <!--  -->
+                 <div class="main-img">
                  <img src="C:\Users\zain\Desktop\twiiter-layout\img\zain1.jpeg" alt="zain-pic" class="l-side-img profile">
-                    <span class="text-muted">What's happening</span>
-                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji.png" alt=""></a>
-                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji2.png" alt=""></a>
-                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji3.png" alt=""></a>
-                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji4.png" alt=""></a>
-                    <a href=""><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji5.png" alt=""></a>
-            </div>
+                    <span class="text-muted">What's happening</span>                    
+                    <a href="" class="img"><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji.png" alt=""></a>
+                    <a href="" class="img"><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji2.png" alt=""></a>
+                    <a href="" class="img"><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji3.png" alt=""></a>
+                    <a href="" class="img"><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji4.png" alt=""></a>
+                    <a href="" class="img"><img src="C:\Users\zain\Desktop\twiiter-layout\img\emoji5.png" alt=""></a>
+                </div>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">69 Days until Levi Ackerman returns <a href="https://t.co/1Y19uNt7aF">pic.twitter.com/1Y19uNt7aF</a></p>&mdash; Attack on Titan Perfect Shots (@AoTshots) <a href="https://twitter.com/AoTshots/status/1455170501739962369?ref_src=twsrc%5Etfw">November 1, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The mission has begun! My Hero Academia: World Heroes’ Mission is out NOW in select Australian cinemas!<br><br>💥🦸 <a href="https://t.co/Zw1iOZ0Ma8">https://t.co/Zw1iOZ0Ma8</a> 🦹💥 <a href="https://t.co/dQCwGv7coo">pic.twitter.com/dQCwGv7coo</a></p>&mdash; Madman Anime (@Madman) <a href="https://twitter.com/Madman/status/1453972388962439169?ref_src=twsrc%5Etfw">October 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <!--  -->
+                </div>
         </div>
     </div>
 </body>
